# eincheck

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  lint.sh  pyproject.toml  run_doctest.py  run_tests.sh
.github/workflows/: pr.yaml
docs/source/: api.rst  conf.py  index.rst  performance.rst  specifying_shapes.rst
eincheck/: __init__.py  cache.py  contexts.py  types.py  utils.py
eincheck/checks/: data.py  func.py  shapes.py
eincheck/parser/: dim_spec.py  expressions.py  grammar.py  parse_cache.py  shape_spec.py
tests/: cache_test.py  contexts_test.py  utils.py  utils_test.py
tests/checks/: data_test.py  func_test.py  shapes_test.py
tests/parser/: expressions_test.py  grammar_test.py  shape_spec_test.py
