[tool.poetry]
name = "eincheck"
version = "0.1.0"
description = ""
authors = ["Ethan Pronovost <epronovo1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
lark = "~1.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
mypy = "^0.982"
attrs = ">=21.1"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^6.0.0"
numpy = "^1.10.0"
black = "==22.10.0"
autoflake = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true

[tool.mypy]
show_error_codes = true
strict = true

