[tool.poetry]
name = "eincheck"
version = "0.6.0"
description = "Tensor shape checks inspired by einstein notation"
authors = ["Ethan Pronovost <epronovo1@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/EPronovost/eincheck"
documentation = "https://eincheck.readthedocs.io/en/main/"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
lark = "~1.1"
typing-extensions = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
mypy = "^1.0.0"
attrs = ">=22.2"
isort = "^5.12.0"
flake8 = "^6.0"
pytest = "^7.2"
numpy = "^1.22"
black = "==24.8.0"
autoflake = "^2.0.0"
sphinx = "^6.1.3"
sphinx-autodoc-typehints = "=1.22"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core ~ 1.3"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true

[tool.mypy]
show_error_codes = true
strict = true
exclude = "docs"

